--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
@@ -41,7 +41,7 @@
 
 /* SEARCH BLOCK PLACEMENT
 ------------------- */
-.block-search-form-block{
+header .block-search-form-block{
 	position: static;
 	display: inline-block;
 	text-align: right;
