Update blog author twig to remove duplicate links

--- a/web/themes/oc_patterns/templates/zzz-custom/reference-view-modes/node--profiles--blog-author.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/reference-view-modes/node--profiles--blog-author.html.twig
@@ -83,13 +83,13 @@ This template is used for the author field rendering on posts
 
 <div class="profile-teaser">
 	{%- if elements.field_profile_image -%}
-		<a href="/node/{{- nid -}}">{{- elements.field_profile_image -}}</a>
+		{{- elements.field_profile_image -}}
 	{%- endif -%}
 	<div class="info">
-		<h4><a href="/node/{{- nid -}}">About the Author:</a></h4>
+		<h3><a href="/node/{{- nid -}}">About the Author:</a></h3>
 		{%- set text = elements.body|render|striptags -%}
-		<div class="body">{{- text|length > 300 ? text|slice(0, 300) ~ '...' : text -}} 
-			<a href="/node/{{- nid -}}">More&nbsp;»</a>
+		<div class="body">
+			{{- text|length > 300 ? text|slice(0, 300) ~ '...' : text -}} 
 		</div>
 	</div>
 </div>
