--- a/web/themes/oc_patterns/templates/zzz-custom/media templates/file-link.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/media templates/file-link.html.twig
@@ -11,4 +11,4 @@
  */
 #}
 {# set file icons based on type #}
-<span{{ attributes }}><i class="fa {% if 'file--application-pdf' in attributes.class %}fa-file-pdf-o{% elseif 'file--x-office-document' in attributes.class %}fa-file-word-o{% elseif 'file--x-office-spreadsheet' in attributes.class %}fa-file-excel-o{% elseif 'file--x-office-presentation' in attributes.class %}fa-file-powerpoint-o{% else %}fa-file-text-0{% endif %}" aria-hidden="true"></i>{{- link -}}</span>
+<span{{ attributes }}>{{- link -}}</span>
