--- a/web/modules/custom/oc_custom/css/custom-global.css
+++ b/web/modules/custom/oc_custom/css/custom-global.css
@@ -140,11 +140,11 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 	outline: none;
 }
 .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked{
-	border: 8px solid #bf0e0e;
+	border: 8px solid #ccc;
 	outline: none;
 }
 .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:hover,.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:focus{
-	border: 8px solid #ccc;
+	border: 8px solid #ddd;
 	outline: none;
 }
 
@@ -182,22 +182,22 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 	display: none;
 }
 .eb-media .views-field .file-extension [class$='.pdf'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='pdf'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='pdf']{
-	background: url(../icons/file-icons/file-pdf.svg) no-repeat;
+	background: url(../icons/file-icons/pdf.svg) no-repeat;
 	background-position: center;
 	background-size: contain;
 }
 .eb-media .views-field .file-extension [class$='.doc'],.eb-media .views-field .file-extension [class$='.docx'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='doc'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='docx'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='doc'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='docx']{
-	background: url(../icons/file-icons/file-word.svg) no-repeat;
+	background: url(../icons/file-icons/word.svg) no-repeat;
 	background-position: center;
 	background-size: contain;
 }
-.eb-media .views-field .file-extension [class$='.xls'],.eb-media .views-field .file-extension [class$='.xlsx'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='xls'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='xlsx'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='xls'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='xls']{
-	background: url(../icons/file-icons/file-xls.svg) no-repeat;
+.eb-media .views-field .file-extension [class$='.xls'],.eb-media .views-field .file-extension [class$='.xlsx'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='xls'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='xlsx'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='xls'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='xlsx']{
+	background: url(../icons/file-icons/excel.svg) no-repeat;
 	background-position: center;
 	background-size: contain;
 }
 .eb-media .views-field .file-extension [class$='.ppt'],.eb-media .views-field .file-extension [class$='.pptx'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='ppt'],.eb-media.view-display-id-embed_browser .views-field-thumbnail__target-id span.doc[class$='pptx'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='ppt'],.view-media.view-display-id-media_page_list .views-field-thumbnail__target-id span.doc[class$='pptx']{
-	background: url(../icons/file-icons/file-ppt.svg) no-repeat;
+	background: url(../icons/file-icons/powerpoint.svg) no-repeat;
 	background-position: center;
 	background-size: contain;
 }
