--- a/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
@@ -4,7 +4,7 @@ BACKGROUND SIZE MIXINS
 //This file holds all background size mixins so they can be easily changed if the sprite is changed.
 //background size is the icons row and column position in the sprite multipled by the intended size.
 $columns: 3;
-$rows: 2;
+$rows: 3;
 
 
 /// used in ICONS.SCSS
@@ -13,6 +13,25 @@ $plicon: 60px;
 	@include backgroundSize($columns * $plicon,$rows * $plicon);
 }
 
+
+///used in MEDIA.SCSS
+$docIcon: 18px;
+@mixin docPDF{
+	@include sprite-pdf;
+	@include backgroundSize($columns * $docIcon,$rows * $docIcon);
+}
+@mixin docWord{
+	@include sprite-word;
+	@include backgroundSize($columns * $docIcon,$rows * $docIcon);
+}
+@mixin docExcel{
+	@include sprite-excel;
+	@include backgroundSize($columns * $docIcon,$rows * $docIcon);
+}
+@mixin docPowerpoint{
+	@include sprite-powerpoint;
+	@include backgroundSize($columns * $docIcon,$rows * $docIcon);
+}
 
 
 
