--- a/web/themes/oc_patterns/components/_patterns/01-atoms/04-images/icons/_icon_sprite.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/04-images/icons/_icon_sprite.scss
@@ -12,10 +12,20 @@
   @include sprite-drupal;
 }
 
-@mixin sprite-facebook {
+@mixin sprite-excel {
   @include svg-common;
 
   background-position: 50% 0;
+}
+
+.sprite-excel {
+  @include sprite-excel;
+}
+
+@mixin sprite-facebook {
+  @include svg-common;
+
+  background-position: 0 50%;
 }
 
 .sprite-facebook {
@@ -25,27 +35,57 @@
 @mixin sprite-linkedin {
   @include svg-common;
 
-  background-position: 0 100%;
+  background-position: 50% 50%;
 }
 
 .sprite-linkedin {
   @include sprite-linkedin;
 }
 
+@mixin sprite-pdf {
+  @include svg-common;
+
+  background-position: 100% 0;
+}
+
+.sprite-pdf {
+  @include sprite-pdf;
+}
+
+@mixin sprite-powerpoint {
+  @include svg-common;
+
+  background-position: 100% 50%;
+}
+
+.sprite-powerpoint {
+  @include sprite-powerpoint;
+}
+
 @mixin sprite-twitter {
   @include svg-common;
 
-  background-position: 50% 100%;
+  background-position: 0 100%;
 }
 
 .sprite-twitter {
   @include sprite-twitter;
 }
 
+@mixin sprite-word {
+  @include svg-common;
+
+  background-position: 50% 100%;
+}
+
+.sprite-word {
+  @include sprite-word;
+}
+
 @mixin sprite-youtube {
   @include svg-common;
 
-  background-position: 100% 0;
+  background-position: 100% 100%;
 }
 
 .sprite-youtube {
