--- a/web/modules/custom/oc_custom/css/custom-global.css
+++ b/web/modules/custom/oc_custom/css/custom-global.css
@@ -119,7 +119,7 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 	margin: 0 0 3em;
 	position: relative;
 }
-.views-field-entity-browser-select .form-type-checkbox{
+.eb-media .views-field-entity-browser-select .form-type-checkbox{
 	margin: 0;
 	position: absolute;
 	top: 0;
@@ -127,7 +127,7 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 	z-index: 20;
 }
 
-.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]{
+.eb-media .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]{
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
@@ -135,21 +135,21 @@ header.content-header .shortcut-action--remove:hover .shortcut-action__icon,head
 	width: 250px;
 	border: 8px solid transparent;
 }
-.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:hover,.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:focus{
+.eb-media  .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:hover,.eb-media .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:focus{
 	border: 8px solid #bf0e0e;
 	outline: none;
 }
-.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked{
+.eb-media  .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked{
 	border: 8px solid #ccc;
 	outline: none;
 }
-.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:hover,.views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:focus{
+.eb-media .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:hover,.eb-media .views-field-entity-browser-select .form-type-checkbox input[type="checkbox"]:checked:focus{
 	border: 8px solid #ddd;
 	outline: none;
 }
 
 /* eb select button */
-.entity-browser-form > .form-actions{
+.eb-media .entity-browser-form > .form-actions{
 	position: fixed;
 	bottom: 0;
 	left: 0;
