Make pl specific colors specific to pl and update them for contrast

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/03-grid/grid.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/03-grid/grid.twig
@@ -6,15 +6,17 @@
 
 {# BREAKPOINTS #}
 <h3 class="mixin-group">Size Variables</h3>
-<p>Defined in: breakpoints.scss</p>
+<p>Defined in: 00-breakpoints.scss</p>
 
 <ul class="clean-list">
 	<li><strong>$smallTab:</strong> 500px</li>
 	<li><strong>$tab:</strong> 760px</li>
 	<li><strong>$desk:</strong> 900px</li>
-	<li><strong>$max-width:</strong> 1200px</li>
+	<li><strong>$contentStop:</strong> 1200px</li>
 	<li><strong>$textMax:</strong> 800px</li>
 	<li><strong>$onlyTab:</strong> 760–899px</li>
+	<li><strong>$onlySmall:</strong> < 760px</li>
+	<li><strong>$onlyPhone:</strong> < 500px</li>
 	<li><strong>$mobileMenu:</strong> < 980px</li>
 	<li><strong>$deskMenu:</strong> >= 980px</li>
 </ul>
