--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/03-button-outline.twig
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/03-button-outline.twig
@@ -1,4 +1,4 @@
 <p>Outline button styling (mixin).</p>
-<div class="pl background image widget-color">
+<div class="pl">
 	<a href="/" class="button-outline">Click Me</a>
 </div>
