Add spotlight option to main nav

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -9,6 +9,15 @@
 
 <p>Macros set here define theming variables in their corresponding twig files in both Pattern Lab and Drupal.</p>
 
+{#######  NAVIGATION VARIABLES  #######}
+<div class="macro-tile">
+<p><strong>Spotlight Main nav</strong></br>
+	VARIABLES= default, spotlight</br>
+	Current= spotlight
+</p>
+</div>
+{% macro mainNavStyle() %}spotlight{% endmacro %}
+
 
 {#######  SEARCH VARIABLES  #######}
 <div class="macro-tile">
