--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/superfish-block-main/_superfish-block.twig
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/superfish-block-main/_superfish-block.twig
@@ -2,12 +2,13 @@
  Drupal: This file is embedded in the site-header.twig pattern lab file and in the superfish main Drupal block. Menu alignment macros define the position in the header: left, right, center.
 #}
 
+{% import "@base/global/05-macros/macros.twig" as styles %}
 {% extends "@molecules/menus/02-superfish/00-superfish.twig" %}
 
 {% block superhide_start %}{# hide pl-only content #}{% endblock %}
 		 
 	{% block superfish_main %}
-		<div id="block-oc-patterns-mainnavigation" class="contextual-region block block-superfishmain">
+		<div id="block-oc-patterns-mainnavigation" class="contextual-region block block-superfishmain {{ styles.mainNavStyle }}">
 			{% block superfish_content %}
 				{% block superfish_mobile %}
 					<div class="sf-accordion-toggle sf-style-none">
