Remove restricted block type, change block theme suggestions and templates

--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/block.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/block.html.twig
@@ -46,7 +46,9 @@
   idClass
 ] %}
 
-<div{{ attributes.addClass(classes) }}>
+{% block blockAttributes %}
+  <div{{ attributes.addClass(classes) }}>
+{% endblock %}
   {% block blockSetup %}
     {{ title_prefix }}
     {% block blockLabel %}
