--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/branding-block/_branding-block.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/branding-block/_branding-block.scss
@@ -2,8 +2,9 @@
    BRANDING BLOCK
 =================== */
 
-.block--system-branding{
+.block-system-branding-block{
 	a{
+		display: block;
 		img{
 			border: 1px solid transparent;
 			display: block;
