--- a/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/03-site/01-site-header/_site-header.scss
@@ -16,7 +16,7 @@
 
 /* BRANDING BLOCK PLACEMENT
 ------------------- */
-.block--system-branding{
+.block-system-branding-block{
 	//leave room for search toogle and menu hamburger on mobile
 	@include calc(width, "100% - 70px");
 	position: relative;
