--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/search-block.twig
@@ -23,18 +23,15 @@
 				<div class="search-form-wrapper" aria-expanded="false">
 					<form action="/site-search" method="get" id="views-exposed-form-site-search-search-results" accept-charset="UTF-8" data-drupal-form-fields="edit-search-api-fulltext">
 
-						{% block searchInput %}
-						<div class="js-form-item form-item js-form-type-textfield form-item-search-api-fulltext js-form-item-search-api-fulltext">
-							<label for="edit-search-api-fulltext" class="visually-hidden">Search</label>
-							<input id="edit-search-api-fulltext" class="form-text" placeholder="enter keywords" data-drupal-selector="edit-search-api-fulltext" type="text" size="30" max-length="128" >
-						</div>
-						{% endblock %}
-
-						{% block searchActions %}
-						<div data-drupal-selector="edit-actions" id="edit-site-search-actions" class="form-actions js-form-wrapper form-wrapper">
-							<input id="edit-submit-site-search" class="button js-form-submit form-submit" data-drupal-selector="edit-submit-site-search" value="search" type="submit">
-							<i class="fa fa-search" aria-hidden="true"></i>
-						</div>
+						{% block searchFormInner %}
+							<div class="js-form-item form-item js-form-type-textfield form-item-search-api-fulltext js-form-item-search-api-fulltext">
+								<label for="edit-search-api-fulltext" class="visually-hidden">Search</label>
+								<input id="edit-search-api-fulltext" class="form-text" placeholder="enter keywords" data-drupal-selector="edit-search-api-fulltext" type="text" size="30" max-length="128" >
+							</div>
+							<div data-drupal-selector="edit-actions" id="edit-site-search-actions" class="form-actions js-form-wrapper form-wrapper">
+								<input id="edit-submit-site-search" class="button js-form-submit form-submit" data-drupal-selector="edit-submit-site-search" value="search" type="submit">
+								<i class="fa fa-search" aria-hidden="true"></i>
+							</div>
 						{% endblock %}
 
 					</form>
