--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/block--system-branding-block.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/block--system-branding-block.html.twig
@@ -1,5 +1,4 @@
-{% extends "block.html.twig" %}
-{% set attributes = attributes.addClass('block--system-branding') %}
+
 {#
 /**
  * @file
@@ -14,11 +13,15 @@
  * - site_slogan: Slogan for site as defined in Site information settings.
  */
 #}
-{% block content %}
+
+{% extends "block.html.twig" %}
+
+{% block blockContent %}
 	<a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">
   		{% if site_logo %}
       		<img class="logo" src="{{ site_logo }}" alt="{{ 'Home'|t }}" />
     	{% endif %}
+
     	{% if site_name %}
     		<span class="site-name">{{ site_name }}</span>
     	{% endif %}
