--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--system-menu-block.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--system-menu-block.html.twig
@@ -41,7 +41,7 @@
 <nav role="navigation" aria-labelledby="{{ heading_id }}" id="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby', 'id').addClass(blockTitle,heading_id) }}>
   {# Label. If not displayed, we still provide it for screen readers. #}
   <h2 class="block-title{% if not configuration.label_display %} visually-hidden{% endif %}">{{ configuration.label }}</h2>
-
+  {{ title_suffix }}
   {# Menu. #}
   {% block content %}
     {{ content }}
